	  case where the types of all items conform to one of them. In that
	  case the manifest array will be an array of that type.
	* The scope of object-test locals can cover the following assertions
	  in the same postcondition or invariant clause because it's as if
	  they were separated by "and then" operators. It was already 
	  implemented that way in preconditions.
	* Start checking void-safety validity rules.

	Gobo Eiffel XML Library:

	* Added option to let the XML pretty printer use empty element tags
	  <tag/> instead of <tag><tag/>.

	Miscellaneous:

	* Removed classes and features that had been marked as obsolete
	  in 2004 or before.
	* Removed warnings when compiling with ISE 6.6.

Version 3.9 - 20 November 2008

	geant:

	* Removed support for SmartEiffel task <se>.

	gec:

	* Fixed some C compilation warnings when using gcc as back-end C compiler.
	  See bug#1961462.
	* Added support for object equality ('~' and '/~'). Equality expressions
	  ('=' and '/=') now use the semantics of object equality when the operands
	  are dynamically of expanded types.
	* Added experimental support for Qualified Anchored Types (types of the
	  form 'like a.b' or 'like {A}.b).

	gelint:

	* Fixed bug where no validity error was reported when a creation procedure
	  of a creation instruction did not exist in the base class of the creation
	  type.

	getest:

	* Added an indexing clause "generator" to the generated classes.
	  See feature request bug#1961466.
	* Provided programmatic access to test results.
	* Removed support for config file 'getest.se' and option --se.

	gexace:

	* Made sure that several options 'override_cluster' can be specified
	  in Xace files.
	* Fixed bug when generating ECF files from Xace files: the override
	  clusters were not marked as such.
	* Removed support for SmartEiffel config files.

	Gobo Eiffel Kernel Library:

	* Added `make_from_string_general' and `make_from_substring_general'
	  in class UC_STRING.
