@@ -111,10 +111,10 @@ create
 %type <ET_ASSIGNER> Assigner_opt
 %type <ET_BOOLEAN_CONSTANT> Boolean_constant
 %type <ET_BRACKET_ARGUMENT_LIST> Bracket_actual_list
-%type <ET_BRACKET_EXPRESSION> Bracket_expression
+%type <ET_BRACKET_EXPRESSION> Bracket_expression Typed_bracket_expression Untyped_bracket_expression
 %type <ET_CALL_AGENT> Call_agent
 %type <ET_CALL_EXPRESSION> Qualified_call_expression
-%type <ET_CHARACTER_CONSTANT> Character_constant
+%type <ET_CHARACTER_CONSTANT> Character_constant Typed_character_constant Untyped_character_constant
 %type <ET_CHOICE> Choice
 %type <ET_CHOICE_CONSTANT> Choice_constant
 %type <ET_CHOICE_ITEM> Choice_comma
@@ -148,9 +148,10 @@ create
 %type <ET_ELSEIF_PART_LIST> Elseif_list Elseif_part_list
 %type <ET_EXPORT> New_export_item
 %type <ET_EXPORT_LIST> New_exports New_exports_opt New_export_list
-%type <ET_EXPRESSION> Expression Call_chain
+%type <ET_EXPRESSION> Expression Typed_call_chain Untyped_call_chain
 %type <ET_EXPRESSION> Precursor_expression Address_mark
-%type <ET_EXPRESSION> Call_expression Bracket_target
+%type <ET_EXPRESSION> Typed_call_expression Untyped_call_expression
+%type <ET_EXPRESSION> Typed_bracket_target Untyped_bracket_target
 %type <ET_EXPRESSION> Binary_expression Non_binary_expression Non_binary_and_typed_expression
 %type <ET_EXPRESSION_ITEM> Expression_comma
 %type <ET_EXTENDED_FEATURE_NAME> Extended_feature_name
@@ -187,7 +188,7 @@ create
 %type <ET_LOCAL_VARIABLE_LIST> Local_declarations_opt Local_variable_list
 %type <ET_LOOP_INVARIANTS> Loop_invariant_clause Loop_invariant_clause_opt
 %type <ET_MANIFEST_ARRAY> Manifest_array Manifest_array_expression_list
-%type <ET_MANIFEST_STRING> Manifest_string
+%type <ET_MANIFEST_STRING> Manifest_string Typed_manifest_string Untyped_manifest_string
 %type <ET_MANIFEST_STRING_ITEM> Manifest_string_comma
 %type <ET_MANIFEST_STRING_LIST> Manifest_string_list Parenthesized_manifest_string_list_opt
 %type <ET_MANIFEST_TUPLE> Manifest_tuple Manifest_tuple_expression_list
@@ -217,7 +218,7 @@ create
 %type <ET_WHEN_PART_LIST> When_list When_list_opt
 %type <ET_WRITABLE> Writable
 
-%expect 64
+%expect 92
 %start Class_declarations
 
 %%
@@ -502,9 +503,9 @@ Index_value: Identifier
 		{ $$ := $1 }
 	| Character_constant
 		{ $$ := $1 }
-	| Untyped_integer_constant
+	| Integer_constant
 		{ $$ := $1 }
-	| Untyped_real_constant
+	| Real_constant
 		{ $$ := $1 }
 	| Manifest_string
 		{ $$ := $1 }
@@ -1995,10 +1996,10 @@ Single_query_declaration: Extended_feature_name ':' Type Assigner_opt
 				$$ := ast_factory.new_deferred_function ($1, $2, ast_factory.new_colon_type ($3, $4), $5, Void, $6, $7, $8, $9, $10, $11, $12, last_clients, last_feature_clause, last_class)
 			end
 		}
-	| Extended_feature_name ':' Type Assigner_opt E_IS Indexing_clause_opt Obsolete_opt Precondition_opt E_EXTERNAL Manifest_string
+	| Extended_feature_name ':' Type Assigner_opt E_IS Indexing_clause_opt Obsolete_opt Precondition_opt E_EXTERNAL Untyped_manifest_string
 	External_name_opt Postcondition_opt E_END Semicolon_opt
 		{ $$ := new_external_function ($1, Void, ast_factory.new_colon_type ($2, $3), $4, $5, $6, $7, $8, ast_factory.new_external_language ($9, $10), $11, $12, $13, $14, last_clients, last_feature_clause, last_class) }
-	| Extended_feature_name ':' Type Assigner_opt Indexing_clause_opt Obsolete_opt Precondition_opt E_EXTERNAL Manifest_string
+	| Extended_feature_name ':' Type Assigner_opt Indexing_clause_opt Obsolete_opt Precondition_opt E_EXTERNAL Untyped_manifest_string
 	External_name_opt Postcondition_opt E_END Semicolon_opt
 		{
 			if current_system.is_ise and then current_system.ise_version < ise_5_7_59914 then
@@ -2008,11 +2009,11 @@ Single_query_declaration: Extended_feature_name ':' Type Assigner_opt
 			end
 		}
 	| Extended_feature_name Feature_formal_arguments ':' Type Assigner_opt E_IS Indexing_clause_opt
-	Obsolete_opt Precondition_opt E_EXTERNAL Manifest_string
+	Obsolete_opt Precondition_opt E_EXTERNAL Untyped_manifest_string
 	External_name_opt Postcondition_opt E_END Semicolon_opt
 		{ $$ := new_external_function ($1, $2, ast_factory.new_colon_type ($3, $4), $5, $6, $7, $8, $9, ast_factory.new_external_language ($10, $11), $12, $13, $14, $15, last_clients, last_feature_clause, last_class) }
 	| Extended_feature_name Feature_formal_arguments ':' Type Assigner_opt Indexing_clause_opt
-	Obsolete_opt Precondition_opt E_EXTERNAL Manifest_string
+	Obsolete_opt Precondition_opt E_EXTERNAL Untyped_manifest_string
 	External_name_opt Postcondition_opt E_END Semicolon_opt
 		{
 			if current_system.is_ise and then current_system.ise_version < ise_5_7_59914 then
@@ -2042,11 +2043,11 @@ Single_procedure_declaration: Extended_feature_name Is_opt Indexing_clause_opt O
 	| Extended_feature_name Feature_formal_arguments Is_opt Indexing_clause_opt
 	Obsolete_opt Precondition_opt E_DEFERRED Postcondition_opt E_END Semicolon_opt
 		{ $$ := ast_factory.new_deferred_procedure ($1, $2, $3, $4, $5, $6, $7, $8, $9, $10, last_clients, last_feature_clause, last_class) }
-	| Extended_feature_name Is_opt Indexing_clause_opt Obsolete_opt Precondition_opt E_EXTERNAL Manifest_string
+	| Extended_feature_name Is_opt Indexing_clause_opt Obsolete_opt Precondition_opt E_EXTERNAL Untyped_manifest_string
 	External_name_opt Postcondition_opt E_END Semicolon_opt
 		{ $$ := new_external_procedure ($1, Void, $2, $3, $4, $5, ast_factory.new_external_language ($6, $7), $8, $9, $10, $11, last_clients, last_feature_clause, last_class) }
 	| Extended_feature_name Feature_formal_arguments Is_opt Indexing_clause_opt
-	Obsolete_opt Precondition_opt E_EXTERNAL Manifest_string
+	Obsolete_opt Precondition_opt E_EXTERNAL Untyped_manifest_string
 	External_name_opt Postcondition_opt E_END Semicolon_opt
 		{ $$ := new_external_procedure ($1, $2, $3, $4, $5, $6, ast_factory.new_external_language ($7, $8), $9, $10, $11, $12, last_clients, last_feature_clause, last_class) }
 	;
@@ -2071,7 +2072,7 @@ Semicolon_opt: -- Empty
 
 External_name_opt: -- Empty
 		-- { $$ := Void }
-	| E_ALIAS Manifest_string
+	| E_ALIAS Untyped_manifest_string
 		{ $$ := ast_factory.new_external_alias ($1, $2) }
 	;
 
@@ -3435,7 +3436,7 @@ Parenthesized_manifest_string_list_opt: -- Empty
 		}
 	;
 
-Manifest_string_list: Manifest_string ')'
+Manifest_string_list: Untyped_manifest_string ')'
 		{
 			if $1 /= Void then
 				$$ := ast_factory.new_manifest_string_list (last_symbol, $2, counter_value + 1)
@@ -3455,7 +3456,7 @@ Manifest_string_list: Manifest_string ')'
 		}
 	;
 
-Manifest_string_comma: Manifest_string ','
+Manifest_string_comma: Untyped_manifest_string ','
 		{
 			$$ := ast_factory.new_manifest_string_comma ($1, $2)
 			if $$ /= Void then
@@ -3468,7 +3469,9 @@ Manifest_string_comma: Manifest_string ','
 
 Call_instruction: Identifier Actuals_opt
 		{ $$ := new_unqualified_call_instruction ($1, $2) }
-	| Call_chain '.' Identifier Actuals_opt
+	| Typed_call_chain '.' Identifier Actuals_opt
+		{ $$ := ast_factory.new_call_instruction ($1, ast_factory.new_dot_feature_name ($2, $3), $4) }
+	| Untyped_call_chain '.' Identifier Actuals_opt
 		{ $$ := ast_factory.new_call_instruction ($1, ast_factory.new_dot_feature_name ($2, $3), $4) }
 	| E_PRECURSOR Actuals_opt
 		{ $$ := ast_factory.new_precursor_instruction (False, $1, Void, $2) }
@@ -3480,13 +3483,19 @@ Call_instruction: Identifier Actuals_opt
 		{ $$ := ast_factory.new_static_call_instruction (Void, ast_factory.new_target_type ($1, $2, $3), ast_factory.new_dot_feature_name ($4, $5), $6) }
 	;
 
-Call_expression: Identifier Actuals_opt
+Untyped_call_expression: Identifier Actuals_opt
 		{ $$ := new_unqualified_call_expression ($1, $2) }
-	| Call_chain '.' Identifier Actuals_opt
+	| Untyped_call_chain '.' Identifier Actuals_opt
 		{ $$ := ast_factory.new_call_expression ($1, ast_factory.new_dot_feature_name ($2, $3), $4) }
 	;
-
-Qualified_call_expression: Call_chain '.' Identifier Actuals_opt
+	
+Typed_call_expression: Typed_call_chain '.' Identifier Actuals_opt
+		{ $$ := ast_factory.new_call_expression ($1, ast_factory.new_dot_feature_name ($2, $3), $4) }
+	;
+	
+Qualified_call_expression: Typed_call_chain '.' Identifier Actuals_opt
+		{ $$ := ast_factory.new_call_expression ($1, ast_factory.new_dot_feature_name ($2, $3), $4) }
+	| Untyped_call_chain '.' Identifier Actuals_opt
 		{ $$ := ast_factory.new_call_expression ($1, ast_factory.new_dot_feature_name ($2, $3), $4) }
 	;
 
@@ -3501,8 +3510,8 @@ Precursor_expression: E_PRECURSOR Actuals_opt
 	| E_PRECURSOR '{' Class_name '}' Actuals_opt
 		{ $$ := ast_factory.new_precursor_expression (False, $1, ast_factory.new_precursor_class_name ($2, $3, $4), $5) }
 	;
-
-Call_chain: Identifier Actuals_opt
+	
+Untyped_call_chain: Identifier Actuals_opt
 		{ $$ := new_unqualified_call_expression ($1, $2) }
 	| E_RESULT
 		{ $$ := $1 }
@@ -3512,7 +3521,7 @@ Call_chain: Identifier Actuals_opt
 		{ $$ := $1 }
 	| Precursor_expression
 		{ $$ := $1 }
-	| Bracket_expression
+	| Untyped_bracket_expression
 		{
 			if current_system.is_ise and then current_system.ise_version < ise_5_7_59914 then
 				raise_error
@@ -3522,10 +3531,22 @@ Call_chain: Identifier Actuals_opt
 		}
 	| Static_call_expression
 		{ $$ := $1 }
-	| Call_chain '.' Identifier Actuals_opt
+	| Untyped_call_chain '.' Identifier Actuals_opt
 		{ $$ := ast_factory.new_call_expression ($1, ast_factory.new_dot_feature_name ($2, $3), $4) }
 	;
 
+Typed_call_chain: Typed_bracket_expression
+		{
+			if current_system.is_ise and then current_system.ise_version < ise_5_7_59914 then
+				raise_error
+			else
+				$$ := $1
+			end
+		}
+	| Typed_call_chain '.' Identifier Actuals_opt
+		{ $$ := ast_factory.new_call_expression ($1, ast_factory.new_dot_feature_name ($2, $3), $4) }
+	;
+	
 ------------------------------------------------------------------------------------
 
 Actuals_opt: -- Empty
@@ -3661,13 +3682,17 @@ Non_binary_expression: Non_binary_and_typed_expression
 		{ $$ := $1 }
 	| Typed_real_constant
 		{ $$ := $1 }
+	| Typed_bracket_target
+		{ $$ := $1 }
+	| Typed_bracket_expression
+		{ $$ := $1 }
 	| '{' Type '}'
 		{ $$ := ast_factory.new_manifest_type ($1, $2, $3) }
 	;
 
-Non_binary_and_typed_expression: Bracket_target
+Non_binary_and_typed_expression: Untyped_bracket_target
 		{ $$ := $1 }
-	| Bracket_expression
+	| Untyped_bracket_expression
 		{ $$ := $1 }
 	| Create_expression
 		{ $$ := $1 }
@@ -3705,7 +3730,7 @@ Non_binary_and_typed_expression: Bracket_target
 		{ $$ := new_named_object_test ($1, ast_factory.new_target_type ($2, $3, $4), $5, $6, $7) }
 	;
 
-Bracket_target: Call_expression
+Untyped_bracket_target: Untyped_call_expression
 		{ $$ := $1 }
 	| Static_call_expression
 		{ $$ := $1 }
@@ -3725,11 +3750,12 @@ Bracket_target: Call_expression
 		{ $$ := $1 }
 	| E_VOID
 		{ $$ := $1 }
-	| Character_constant
+	| Untyped_character_constant
 		{ $$ := $1 }
-	| Manifest_string
+	| Untyped_manifest_string
 		{ $$ := $1 }
 	| E_ONCE_STRING Manifest_string
+--
 -- We need to make the distinction between once keywords followed
 -- by a manifest string and once keywords introducing a once-routine
 -- because otherwise we would need to have two look-ahead tokens
@@ -3743,6 +3769,23 @@ Bracket_target: Call_expression
 --         do_nothing
 --      end
 -- Hence the use of 'E_ONCE_STRING' instead of 'E_ONCE'.
+--
+-- Also covers the case of typed manifest string:
+--
+--   f
+--      require
+--         once {STRING_8} "foo" /= Void
+--      once
+--         do_nothing
+--      end
+--
+-- although this will produce a syntax error when writing:
+--
+--   f
+--      once
+--         {CHARACTER_8}.Max_value.do_nothing
+--      end
+--
 		{ $$ := new_once_manifest_string ($1, $2) }
 	| E_BIT
 		{ $$ := $1 }
@@ -3754,7 +3797,34 @@ Bracket_target: Call_expression
 		{ $$ := $1 }
 	;
 
-Bracket_expression: Bracket_target '['
+Typed_bracket_target: Typed_call_expression
+		{ $$ := $1 }
+	| Typed_manifest_string
+		{ $$ := $1 }
+	| Typed_character_constant
+		{ $$ := $1 }
+	;
+	
+Bracket_expression: Typed_bracket_expression
+		{ $$ := $1 }
+	| Untyped_bracket_expression
+		{ $$ := $1 }
+	;
+
+Typed_bracket_expression: Typed_bracket_target '['
+		{
+			add_symbol ($2)
+			add_counter
+		}
+	  Bracket_actual_list
+		{
+			$$ := ast_factory.new_bracket_expression ($1, $2, $4)
+			remove_symbol
+			remove_counter
+		}
+	;
+	
+Untyped_bracket_expression: Untyped_bracket_target '['
 		{
 			add_symbol ($2)
 			add_counter
@@ -3989,14 +4059,14 @@ Inline_agent:
 			$$.set_object_tests ($13)
 		}
 	| E_AGENT No_inline_agent_formal_arguments ':' Type
-	Precondition_opt E_EXTERNAL Manifest_string External_name_opt Postcondition_opt E_END
+	Precondition_opt E_EXTERNAL Untyped_manifest_string External_name_opt Postcondition_opt E_END
 	End_of_inline_agent Agent_actuals_opt
 		{
 			$$ := ast_factory.new_external_function_inline_agent ($1, Void, ast_factory.new_colon_type ($3, $4), $5, ast_factory.new_external_language ($6, $7), $8, $9, $10, $12)
 			$$.set_object_tests ($11)
 		}
 	| E_AGENT Inline_agent_formal_arguments ':' Type
-	Precondition_opt E_EXTERNAL Manifest_string External_name_opt Postcondition_opt E_END
+	Precondition_opt E_EXTERNAL Untyped_manifest_string External_name_opt Postcondition_opt E_END
 	End_of_inline_agent Agent_actuals_opt
 		{
 			$$ := ast_factory.new_external_function_inline_agent ($1, $2, ast_factory.new_colon_type ($3, $4), $5, ast_factory.new_external_language ($6, $7), $8, $9, $10, $12)
@@ -4031,14 +4101,14 @@ Inline_agent:
 			$$.set_object_tests ($11)
 		}
 	| E_AGENT No_inline_agent_formal_arguments
-	Precondition_opt E_EXTERNAL Manifest_string External_name_opt Postcondition_opt E_END
+	Precondition_opt E_EXTERNAL Untyped_manifest_string External_name_opt Postcondition_opt E_END
 	End_of_inline_agent Agent_actuals_opt
 		{
 			$$ := ast_factory.new_external_procedure_inline_agent ($1, Void, $3, ast_factory.new_external_language ($4, $5), $6, $7, $8, $10)
 			$$.set_object_tests ($9)
 		}
 	| E_AGENT Inline_agent_formal_arguments
-	Precondition_opt E_EXTERNAL Manifest_string External_name_opt Postcondition_opt E_END
+	Precondition_opt E_EXTERNAL Untyped_manifest_string External_name_opt Postcondition_opt E_END
 	End_of_inline_agent Agent_actuals_opt
 		{
 			$$ := ast_factory.new_external_procedure_inline_agent ($1, $2, $3, ast_factory.new_external_language ($4, $5), $6, $7, $8, $10)
@@ -4145,7 +4215,13 @@ Agent_actual: Expression
 
 ------------------------------------------------------------------------------------
 
-Manifest_string: E_STRING
+Manifest_string: Untyped_manifest_string
+		{ $$ := $1 }
+	| Typed_manifest_string
+		{ $$ := $1 }
+	;
+	
+Untyped_manifest_string: E_STRING
 		{ $$ := $1 }
 	| E_STRPLUS
 		{ $$ := $1 }
@@ -4193,12 +4269,32 @@ Manifest_string: E_STRING
 		{ abort }
 	;
 
-Character_constant: E_CHARACTER
+Typed_manifest_string: '{' Type '}' Untyped_manifest_string
+		{
+			$$ := $4
+			$$.set_cast_type (ast_factory.new_target_type ($1, $2, $3))
+		}
+	;
+
+Character_constant: Untyped_character_constant
+		{ $$ := $1 }
+	| Typed_character_constant
+		{ $$ := $1 }
+	;
+
+Untyped_character_constant: E_CHARACTER
 		{ $$ := $1 }
 	| E_CHARERR
 		{ abort }
 	;
 
+Typed_character_constant: '{' Type '}' Untyped_character_constant
+		{
+			$$ := $4
+			$$.set_cast_type (ast_factory.new_target_type ($1, $2, $3))
+		}
+	;
+	
 Boolean_constant: E_TRUE
 		{ $$ := $1 }
 	| E_FALSE
