@@ -6,7 +6,7 @@ note
 		"Scanners for Eiffel parsers"
 
 	library: "Gobo Eiffel Tools Library"
-	copyright: "Copyright (c) 1999-2009, Eric Bezault and others"
+	copyright: "Copyright (c) 1999-2011, Eric Bezault and others"
 	license: "MIT License"
 	date: "$Date$"
 	revision: "$Revision$"
@@ -84,13 +84,31 @@ CHAR_CODE (0*([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5]))
 -- to figure out that the first once keyword in the following example
 -- in part of a once manifest string expression and the second is
 -- part of the compound of the once routine:
+--
 --   f
 --      require
 --         once "foo" /= Void
 --      once
 --         do_nothing
 --      end
-[oO][nN][cC][eE]/\"	{
+--
+-- Also covers the case of typed manifest string:
+--
+--   f
+--      require
+--         once {STRING_8} "foo" /= Void
+--      once
+--         do_nothing
+--      end
+--
+-- although this will produce a syntax error when writing:
+--
+--   f
+--      once
+--         {CHARACTER_8}.Max_value.do_nothing
+--      end
+--
+[oO][nN][cC][eE]/["{]	{
 				last_token := E_ONCE_STRING
 				last_literal_start := 1
 				last_literal_end := 4
@@ -98,7 +116,7 @@ CHAR_CODE (0*([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5]))
 				last_comment_end := 0
 				last_et_keyword_value := ast_factory.new_once_keyword (Current)
 			}
-[oO][nN][cC][eE][ \t\r\n]+/\"	{
+[oO][nN][cC][eE][ \t\r\n]+/["{]	{
 				last_token := E_ONCE_STRING
 				last_literal_start := 1
 				last_literal_end := 4
@@ -107,7 +125,7 @@ CHAR_CODE (0*([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5]))
 				last_comment_end := 0
 				last_et_keyword_value := ast_factory.new_once_keyword (Current)
 			}
-[oO][nN][cC][eE]([ \t\r\n]|"--".*\n)+/\"	{
+[oO][nN][cC][eE]([ \t\r\n]|"--".*\n)+/["{]	{
 				last_token := E_ONCE_STRING
 				last_literal_start := 1
 				last_literal_end := 4
