@@ -133,7 +133,9 @@ Version 3.10 - ?
 	  in the same postcondition or invariant clause because it's as if
 	  they were separated by "and then" operators. It was already 
 	  implemented that way in preconditions.
-	* Start checking void-safety validity rules.
+	* Support the ECMA syntax for typed manifest strings and typed character 
+	  constants.
+	* Started checking void-safety validity rules.
 
 	Gobo Eiffel XML Library:
 
